# DiscordKiller

./: Cargo.toml  design-doc.md
DiscordKillerBackend/: Cargo.toml
DiscordKillerBackend/src/: main.rs
DiscordKillerBackend/users/: XpulseIV.json  XpulseIV.txt
DiscordKillerFrontend/: Cargo.toml  design-doc.md
DiscordKillerFrontend/src/: main.rs  styles.rs
DiscordKillerFrontend/src/event/: events.rs  key.rs  mod.rs
DiscordKillerFrontend/src/login_page/: driver.rs  mod.rs  page.rs  ui.rs
DiscordKillerFrontend/src/register_page/: driver.rs  mod.rs  page.rs  ui.rs
src/: crossterm.rs  login.rs  main.rs  styles.rs  ui.rs
src/event/: key.rs  mod.rs
src/login_app/: app.rs  driver.rs  mod.rs  ui.rs
src/login_page/: driver.rs  mod.rs  page.rs  ui.rs
