[package]
name = "discord_killer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
clap = {version = "4.0.32", features = ["derive"]}

reqwest = "0.11.13"
tokio = "1.23.0"
serde = "1.0.151"
tui = "0.19.0"
argh = "0.1.9"
rand = "0.8.5"