[package]
name = "discord_killer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = ["full"]}
crossterm = {version = "0.25.0", features = ["event-stream"]}

reqwest = "0.11.13"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
tui = "0.19.0"
tui-textarea = "0.2.0"
argh = "0.1.9"
rand = "0.8.5"

futures = "0.3.25"
futures-timer = "3.0.2"
sha256 = {version = "1.1.1"}
